--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "eslint-plugin-ember": "^7.7.2",
     "eslint-plugin-node": "^11.0.0",
     "loader.js": "^4.7.0",
+    "lodash": "^4.17.15",
+    "momentjs": "^2.0.0",
     "qunit-dom": "^1.0.0"
   },
   "engines": {
