--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "loader.js": "^4.7.0",
     "lodash": "^4.17.15",
     "momentjs": "^2.0.0",
-    "qunit-dom": "^1.0.0"
+    "pretender": "^3.3.1",
+    "qunit-dom": "^1.0.0",
+    "sinon": "^9.0.0"
   },
   "engines": {
     "node": "10.* || >= 12"
